fixed on iphone5

--- a/style.css
+++ b/style.css
@@ -106,11 +106,11 @@ p {
 -moz-box-shadow: 0px 0px 7px 1px rgba(92,92,92,0.2);
 box-shadow: 0px 0px 7px 1px rgba(92,92,92,0.2);
 font-family: 'Cabin', sans-serif;
-font-size: 2.1em;
-width: 300px;
+font-size: 2.3em;
 padding: 10px;
 text-align: center;
 margin: 30px;
+white-space: normal;
 }
 
 .button .is-large {
